--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,34 @@ body {
     font-size: 100%;
 }
 
-
 #header h1{
     display: flex;
     justify-content: center;
     align-items: center;
     align-content: center;
     height: 95vh;
-    color: #444444;
+    color: #fff;
     font-size: 3.5em;
 }
 
 #header {
-   background-color: 	#0d0d0f; 
-   font-family: Arial, Helvetica, sans-serif;
+    background: linear-gradient(236deg, #697471, #090101);
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 39s ease infinite;
+    animation: AnimationName 39s ease infinite;
+   font-family: 'Lato', sans-serif;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:43% 0%}
+    50%{background-position:58% 100%}
+    100%{background-position:43% 0%}
+}
+@keyframes AnimationName {
+    0%{background-position:43% 0%}
+    50%{background-position:58% 100%}
+    100%{background-position:43% 0%}
 }
 
 #header, #projects, #about-me, #contact-information {
@@ -23,7 +37,7 @@ body {
 }
 
 #arrow {
-    color: #444444;
+    color: #fff;
     height: 5vh;
 }
 
@@ -33,13 +47,13 @@ body {
 }
 
 .work {
-    background: #f0ecec;
+    background: #f5f7fa;
     color: #3f3f3f;
 }
 
 section {
     padding-top: 3em;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .contact-photo:hover {
@@ -53,4 +67,8 @@ section {
 .border-photo {
     border: 2px solid #3f3f3f;
     border-radius: 100%;
+}
+
+.about-me-text {
+    font-size: 1.5em;
 }
